--- a/ChaterView/Resource/Info.plist
+++ b/ChaterView/Resource/Info.plist
@@ -25,6 +25,14 @@
 			</array>
 		</dict>
 	</array>
+    
+<!--    <key>LSApplicationQueriesSchemes</key>-->
+<!--        <array>-->
+<!--            <string>kakaokompassauth</string>-->
+<!--            <string>kakaolink</string>-->
+<!--            <string>kakaotalk</string>-->
+<!--            <string>kakaostory</string>-->
+<!--        </array>-->
 	<key>GOOGLE_CLIENT_ID</key>
 	<string>$(GOOGLE_CLIENT_ID)</string>
 	<key>KAKAO_APP_KEY</key>
